<!DOCTYPE html>
<html>
<head>
  <title>Dune | Jesse Frey</title>
  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../style.css">
</head>
<body>

<header>
  <h1>Dune</h1>
  <nav>
    <a href="../index.html">Home</a>
    <a href="../projects.html">Projects</a>
    <a href="../bookreviews.html">Book Reviews</a>
  </nav>
</header>

<main>
  <p><em>Frank Herbert</em></p>

  <p>
    Dune is interesting ....
  </p>

  <p>
    Sand.. yum
  </p>
</main>

</body>
</html>
